--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,34 @@
-@tailwind base;
+/* @tailwind base; */
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.mi-elemento {
+  background-color: blue;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+   background-color: #f3f4f6; /*Gris claro */
+ /*  background-color: #a7a8a9; /*Gris claro */
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.custom-container {
+  width: 100%;
+  /* width: 35vw; */
+  max-width: 300px;
+  /* max-width: 30vw; */
+  min-width: 250px;
+  padding: 2rem; /* equivalente a 'p-8' de Tailwind */
+  background-color: white; /* equivalente a 'bg-white' de Tailwind */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* equivalente a 'shadow-md' de Tailwind */
+  border-radius: 0.5rem; /* equivalente a 'rounded-md' de Tailwind */
 }
+/* .custom-container {
+  width: 20em; /* 20 veces el tamaño de la fuente del elemento 
+  width: 10rem; /* 10 veces el tamaño de la fuente del elemento raíz 
+  width: 50vw; /* 50% del ancho total de la ventana 
+  width: 30vh; /* 30% de la altura total de la ventana 
+  width: 10cm; /* 10 centímetros 
+  width: 100mm; /* 100 milímetros 
+  width: 2in; /* 2 pulgadas 
+  width: 36pt; /* 36 puntos 
+  width: 3pc; /* 3 picas 
+} */
